[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fav_plots"
version = "0.0.4"
authors = [
  { name="Mena Wang", email="ningwang25@gmail.com" },
]
description = "package to make some favourite plots"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MenaWANG/fav_plots"