[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode_cracker"
dynamic = ["version"]
authors = [
  { name="Albert", email="albertyqyao@gmail.com" },
]
description = "package to assist in solving Leetcode Problems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlbertY123/leetcode-cracker"

[tool.setuptools.dynamic]
version = {attr = "leetcode_cracker.__version__"}